added mtill task param variation

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                 <div class="row">
                   <div class="columns is-centered">
                     <div class="col">
-                      <h2 class="subtitle" style ="margin-left: auto;">
+                      <h2 class="subtitle" style ="padding-left: 200px;">
                         7
                       </h2>
                       <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/prev_length/7.mp4" width="100%" style="border-radius:10px; "></video>
                     </div>
                     <div class="col">
-                        <h2 class="subtitle">
+                        <h2 class="subtitle"style ="padding-left: 200px;">
                          15
                         </h2>
                         <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/prev_length/15.mp4" width="100%" style="border-radius:10px; "></video>
                     </div>
                     <div class="col">
-                      <h2 class="subtitle">
+                      <h2 class="subtitle"style ="padding-left: 200px;">
                         30
                       </h2>
                       <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/prev_length/30.mp4" width="100%" style="border-radius:10px; "></video>
@@ -92,13 +92,13 @@
                 <div class="row">
                   <div class="columns is-centered">
                     <div class="col">
-                      <h2 class="subtitle" style ="margin-left: auto;">
+                      <h2 class="subtitle" style ="padding-left: 200px;">
                         Variation of block height
                       </h2>
                       <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/task_param/block.mp4" width="100%" style="border-radius:10px; "></video>
                     </div>
                     <div class="col">
-                        <h2 class="subtitle">
+                        <h2 class="subtitle" style ="padding-left: 200px;">
                         Variation of gap width
                         </h2>
                         <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/task_param/gap.mp4" width="100%" style="border-radius:10px; "></video>
