--- a/index.html
+++ b/index.html
@@ -131,7 +131,16 @@
       <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/mode_latent.mp4" width="50%" style="border-radius:10px;display: block;margin-left: auto;margin-right: auto;  "></video>
     </div>
 
-    
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <tr>
+        <td style="padding:0px">
+          <br>
+          <p style="text-align:center;font-size:large;">
+            Template borrowed and modified from <a href="https://nerfies.github.io/">Nerfies</a>.
+          </p>
+        </td>
+      </tr>
+    </tbody></table>
 
 </body>
 </html>
