lokesh name changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "head">
         <h1>OGMP: Oracle Guided Multimodal Policies for
             Agile and Versatile Robot Control</h1>
-        <h2 class="authors"><a href="https://lok-i.github.io/website/">Lokesh Rajan</a>   
+        <h2 class="authors"><a href="https://lok-i.github.io/website/">Lokesh Krishna</a>   
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://nike353.github.io/">Nikhil Sobanbabu</a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
