--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <h1 class="title is-2" style="text-align: center; padding-top: 50px;">Proposed Approach</h1>
         <img src="images/frame_work.png" style = "display: block;margin-left: auto;margin-right: auto; width: 1000px;">
     </div>
+
+    <div class="paused_vis">
+      <h1 class="title is-2" style="text-align: center; padding-top: 50px;">Dive Task</h1>
+      <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/dive.mp4" width="50%" style="border-radius:10px;display: block;margin-left: auto;margin-right: auto;  "></video>
+    </div>
     
     <div class="paused_vis">
         <h1 class="title is-2" style="text-align: center; padding-top: 50px;">Oracle guided Control</h1>
@@ -131,6 +136,8 @@
       <video autoplay="" muted="" loop="" playsinline="" controls="" src="videos/mode_latent.mp4" width="50%" style="border-radius:10px;display: block;margin-left: auto;margin-right: auto;  "></video>
     </div>
 
+    
+
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr>
         <td style="padding:0px">
@@ -141,6 +148,8 @@
         </td>
       </tr>
     </tbody></table>
+
+    <!-- <a href='https://mapmyvisitors.com/web/1bvql'  title='Visit tracker'><img src='https://mapmyvisitors.com/map.png?cl=080808&w=a&t=n&d=js9tXnVDWJpC83Ux3z1_uVseCfp7PVK3ZqMbkrbc15M&co=ffffff&ct=808080'/></a> -->
 
 </body>
 </html>
